@@ -427,6 +427,7 @@ Other Changes
   - SOLR-11102: Randomize PointFields in schema-rest.xml and all affected tests (hossman)
   - SOLR-11112: Randomize PointFields in schema-folding.xml and all affected tests (hossman)
   - SOLR-11111: Randomize PointFields in collection1/conf/: schemasurround.xml, schema-sql.xml, and schema-spatial.xml (Steve Rowe)
+  - SOLR-11115: Randomize PointFields in schema-psuedo-fields.xml, schema-multiword-synonyms.xml, and all affected tests (Steve Rowe)
 
 * SOLR-6807: Changed requestDispatcher's handleSelect to default to false, thus ignoring "qt".
   Simplified configs to not refer to handleSelect or "qt".  Switch all tests that assumed true to assume false
